--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,38 +1,53 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-      {
-          "name": "C/C++ Debugger Launch",
-          "type": "cppdbg",
-          "request": "launch",
-          "program": "${workspaceFolder}/Project",
-          "args": [],
-          "cwd": "${workspaceRoot}",
-          "stopAtEntry": false,          
-          "environment": [],
-          "externalConsole": false,            
-          "linux": {            
-            "MIMode": "gdb",
-            "miDebuggerPath": "/usr/bin/gdb"
-          },
-          "osx": {
-            "MIMode": "lldb"
-          },
-          "windows": {
-            "MIMode": "gdb",
-            "miDebuggerPath": "C:\\MinGw\\bin\\gdb.exe"
-          },
-          "setupCommands": [
-              {
-                  "description": "Enable GUI Printing for GDB",
-                  "text": "-enable-pretty-printing",
-                  "ignoreFailures": true
-              },
-          ]            
+    {
+      "name": "C/C++ Debugger Launch",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/Project",
+      "args": [],
+      "cwd": "${workspaceRoot}",
+      "stopAtEntry": false,
+      "environment": [],
+      "externalConsole": false,
+      "linux": {
+        "MIMode": "gdb",
+        "miDebuggerPath": "/usr/bin/gdb"
+      },
+      "osx": {
+        "MIMode": "lldb"
+      },
+      "windows": {
+        "MIMode": "gdb",
+        "miDebuggerPath": "C:\\MinGw\\bin\\gdb.exe"
+      },
+      "setupCommands": [
+        {
+          "description": "Enable GUI Printing for GDB",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
         }
+      ]
+    },
+    {
+      "name": "C/C++ Runner: Debug Session",
+      "type": "cppdbg",
+      "request": "launch",
+      "args": [],
+      "stopAtEntry": false,
+      "externalConsole": true,
+      "cwd": "c:/CE 2SH4/SnakeGame/v1/course-project-wewill12",
+      "program": "c:/CE 2SH4/SnakeGame/v1/course-project-wewill12/build/Debug/outDebug",
+      "MIMode": "gdb",
+      "miDebuggerPath": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
+    }
   ]
-  
 }
